package com.pankosdev.hrmanager.DOTs;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class SkillDTO {
    private String name;
}
