erDiagram

    CANDIDATE {
        number cv_id PK
        varchar40 names
        varchar40 lastnames
        varchar40 profesion
        varchar40 email
        varchar20 phone_number
        date birthdate
        date insertion_date
        varchar200 cv_file_url
        clob summary_cv
    }

    SKILLS {
        number id PK
        varchar50 name
    }

    CANDIDATE_SKILLS {
        number id_skill FK
        number id_candidate FK
    }

    
    EXPERIENCE {
        number id PK
        number id_candidate FK
        varchar40 company
        varchar40 role
        date start_date
        date end_date
        CLOB description
    }


    ACADEMIC_INSTITUTION {
        number id PK
        varchar40 name
        varchar10 abbreviation
        varchar30 country
        varchar30 city
        varchar200 website
    }


    EDUCATION {
        number id PK
        number id_candidate FK
        number id_institution FK
        varchar40 degree
        date start_date
        date end_date
        CLOB description
    }

    LANGUAGES {
        number id PK
        varchar20 name
    }

    LANGUAGE_PROFICIENCY {
        number id PK
        varchar40 description
    }

    CANDIDATE_LANGUAGE {
        number id_language FK
        number id_candidate FK
        number id_proficiency FK
    }


     %% RELACIONES

    CANDIDATE ||--o{ EXPERIENCE : has
    CANDIDATE ||--o{ EDUCATION : has

    ACADEMIC_INSTITUTION ||--o{ EDUCATION : has

    CANDIDATE_LANGUAGE ||--o{ LANGUAGE_PROFICIENCY : has

    CANDIDATE ||--o{ CANDIDATE_SKILLS : has
    SKILLS ||--o{ CANDIDATE_SKILLS : has

    CANDIDATE ||--o{ CANDIDATE_LANGUAGE : has
    LANGUAGES ||--o{ CANDIDATE_LANGUAGE : has